tests/neg/i10943.scala
import language.experimental.fewerBraces

object T:
  class A
  val a = new A : Int // error
end T
