tests/neg/i10943.check
-- [E007] Type Mismatch Error: tests/neg/i10943.scala:5:10 -------------------------------------------------------------
5 |  val a = new A : Int // error
  |          ^^^^^
  |          Found:    T.A
  |          Required: Int
  |
  | longer explanation available when compiling with `-explain`
